# DevMcp

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT_GUIDE.md  Dockerfile  MODELSCOPE_DEPLOY.md  P0_REPORT_FIX_OVERVIEW.md  P1_DAILY_STRUCTURE_OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  TECHNICAL_REVIEW_REPORT.md  WEB_MCP_TEST_REPORT.md  codebuddy-mcp-config.json  config.yaml  conftest.py  docker-compose.yml  main.py  overview.md  pyproject.toml  render.yaml  requirements.txt  server.py  start.bat  temp_ollama_check.txt  temp_skills_dump.txt
.codebuddy/memory/: MEMORY.md
.codebuddy/rules/: devpartner-dev-rules.md  mcp-recording.md  project-structure.md  task_pipeline.md  user-profile-analysis.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-modelScope.yml
.trae/rules/: task_pipeline.md
backend/: __init__.py
backend/api_gateway/: __init__.py  dashboard.html  lifespan.py  rest_api.py  server.py
backend/api_gateway/dependencies/: __init__.py
backend/api_gateway/middlewares/: __init__.py
backend/api_gateway/routes/: __init__.py
backend/business/: __init__.py
backend/core/: __init__.py  bootstrap.py  scheduler.py  skill_domain_standard.py  task_recovery.py
backend/templates/: __init__.py
core/: __init__.py  cloud_sync.py  config.py  database.py  evolution.py  rule_engine.py
data/: devpartner.db-shm  devpartner.db-wal
data/databases/: devpartner.db  devpartner.db-shm  devpartner.db-wal
deploy/: .dockerignore  Dockerfile  README.md  docker-compose.yml
devpartner-agent/: config.yaml  server.py
devpartner-agent/core/: __init__.py  approval_chain.py  capabilities.py  config.py  evolution.py  identity.py  rule_engine.py
devpartner-agent/services/: __init__.py  ai_optimizer.py  dialogue_service.py
devpartner-agent/skills/: __init__.py  daily_summary.py  daily_summary_new.py  self_iterate.py
devpartner-tools/: requirements.txt  server.py
devpartner-tools/tools/: __init__.py  discovery.py  git_operations.py  mcp_discovery.py  web_requests.py
devpartner_agent/: __init__.py  config.yaml  dashboard.html  pyproject.toml  requirements.txt
devpartner_agent/core/: __init__.py  approval_chain.py  bootstrap.py  capabilities.py  config.py  conversation_engine.py  daily_engine.py  database.py  decorators.py  evolution.py  identity.py  knowledge_engine.py  llm_engine.py  llm_unified_analyzer.py  optimization_engine.py  rule_engine.py  scheduler.py  skill_domain_standard.py  system_engine.py  tool_registry.py
devpartner_agent/core/llm_prompts/: __init__.py  _common.py  conversation.py  daily_summary.py  deep_analysis.py  file_parse.py  knowledge_extraction.py  schema.py  self_improvement.py  step.py  user_profile.py
devpartner_agent/routes/: rest_api.py
devpartner_agent/services/: __init__.py  ai_optimizer.py  auto_analyzer.py  callback_registry.py  cleanup_scheduler.py  cleanup_service.py  conversation_analyzer.py  conversation_manager.py  data_integrity.py  dialogue_service.py  discovery_service.py  file_watcher.py  knowledge_extractor.py  knowledge_graph.py  llm_service.py  log_service.py  optimization_loop.py  task_queue.py  user_profile_service.py  vault_exporter.py
devpartner_agent/skills/: __init__.py  daily_summary.py  self_iterate.py
devpartner_tools/: __init__.py  config.yaml  pyproject.toml
devpartner_tools/tools/: __init__.py  filesystem.py  git_operations.py  growth_analytics.py  reasoning.py  system_utils.py  web_requests.py
docs/: ARCHITECTURE_DECISIONS.md  CODING_STANDARDS.md  REFACTORING_COMPLETION_REPORT.md  REFACTORING_TASK_LIST.md  REQUIREMENTS_TEMPLATE.md  RUNBOOK.md  SERVICES_LAYER_CLEANUP_REPORT.md  TEAM_IMPROVEMENT_PLAN.md  TECH_REVIEW.md  analysis_pipeline_review.md  analysis_pipeline_review_v2.md  analytics_reporting_system_design.md  daily_metrics_analysis.md  frontend-redesign-report.md  llm_optimization_report.md  optimization_plan.md  prompt_and_dimension_audit.md  user_profile_protocol.md
foundation/: __init__.py
foundation/api_response/: __init__.py  base_resp.py  page_resp.py  resp_factory.py
foundation/common_utils/: __init__.py  decorators.py  file_tool.py  json_tool.py  schema_tool.py  text_tool.py  time_tool.py
foundation/config/: __init__.py  app_settings.py  config.yaml  constant.py  enum.py  error_code.py  path_settings.py
foundation/exception_framework/: __init__.py  base_exc.py  error_render.py  global_catcher.py
foundation/logger_framework/: __init__.py  log_config.py  log_format.py  logger_proxy.py
foundation/trace_tracker/: __init__.py  context_proxy.py  span_tracker.py  tracker_api.py  write_tracker.py
frontend/: README.md
mcp_service/: __init__.py  mcp_server.py
models/: README.md
prompts/: __init__.py  _common.py  conversation.py  daily_summary.py  deep_analysis.py  file_parse.py  knowledge_extraction.py  schema.py  self_improvement.py  step.py  user_profile.py
rules/: __init__.py
scripts/: UPGRADE_V5_README.md  _test_daily_normalize.py  analyze_unused_methods.py  backfill_conversation.py  check_model.py  check_v5_status.py  cleanup_zombies.py  export_ddl.py  fix_kp_domains.py  fix_skill_domains.py  gen_dashboard.py  generate_analytics_report.py  healthcheck.py  migrate_db_v961.py  start_modelscope.sh  traditional_upgrader.py  v4.3_migrate_backfill.sql  verify_db_schema.py
scripts/archive/: LLM_REFACTORING_GUIDE.md  upgrade_to_v5.py  v5.0_schema_upgrade.sql
services/: __init__.py  ai_optimizer.py  dialogue_service.py  discovery_service.py  log_service.py  mindmap_service.py  setup_service.py
skills/: __init__.py  daily_summary.py  self_iterate.py
tests/: README.md  _check_db.py  _verify_v6.py  test_conversations_api.py  test_dashboard_e2e.py  test_kb_rectify_t1t2.py  test_kb_rectify_t3t4t5.py  test_kb_rectify_t6t7.py  test_report_endpoints_anomaly.py  test_smoke.py  test_v5_core.py  test_vault_export.py  test_web_mcp_integration.py
tools/: __init__.py  filesystem.py  native_tools.py  subprocess_tools.py
(+71 files in other folders)
