[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "devpartner"
version = "9.2.0"
description = "DevPartner MCP 服务器 - 会话管理 + 异步任务 + 知识图谱 + Web Dashboard"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.3.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["ollama>=0.4.0"]

# 开发/测试依赖
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]