[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devpartner"
version = "9.5.5"
description = "DevPartner MCP 服务器 - 会话管理 + 异步任务 + 知识图谱 + Web Dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.3.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "starlette>=0.27.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
llm = ["ollama>=0.4.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5.0",
    "pre-commit>=3.5.0",
]

[tool.setuptools]
packages = ["backend", "foundation", "mcp_service"]

# ---------------------------------------------------------------------------
# 测试配置（原 tests/README.md 引用但缺失，本次审查补齐）
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "llm_mock: 标记测试跳过真实 LLM 推理，使用预设响应",
    "integration: 标记为集成测试（可能依赖外部服务如 Ollama/SQLite 文件）",
]

[tool.coverage.run]
source = ["backend", "foundation"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60

# ---------------------------------------------------------------------------
# Ruff —— 统一 Lint / Format（pre-commit 与 CI 共用）
# 注：T201(print) 暂不全局启用，避免一次性误伤启动横幅；
#     新业务代码请使用 foundation.logger_framework 的 logger，详见 docs/CODING_STANDARDS.md
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["backend", "foundation", "mcp_service"]
# scripts/ 为运维/迁移辅助脚本，不属于发布产物，暂不纳入严格 lint（见审查报告 backlog）
exclude = ["scripts", ".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
# 已修复: E722(bare-except)/F821(undefined-name)/UP006/UP045/I001/F541 等 707 处
# 以下为第二阶段待清理的风格类债务（已在技术审查报告中登记，清理后逐步移出 ignore）:
ignore = [
    "E501",   # 行过长（优先用 ruff format 处理）
    "B008",   # FastAPI/FastMCP 依赖注入装饰器误报
    "SIM105", # 不必要的 try/except 上下文
    "W291",   # 行尾空白（ruff format 已能处理大部分）
    "E402",   # 模块级 import 未置顶（mcp_server 等有意为之）
    "F841",   # 未使用变量（多为遗留死代码，需逐处确认后删除）
    "E741",   # 歧义变量名（l/i/o 等）
    "B007",   # 循环变量未使用
    "B039",   # ContextVar 可变默认值
    "B905",   # zip 未指定 strict=
    "C416",   # 不必要的推导式
    "SIM102", # 可合并的嵌套 if
    "SIM108", # 可用三元表达式替代
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"mcp_service/mcp_server.py" = ["T201"]  # 启动横幅允许 print

[tool.ruff.format]
quote-style = "double"
