[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devpartner"
version = "9.5.5"
description = "DevPartner MCP 服务器 - 会话管理 + 异步任务 + 知识图谱 + Web Dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.3.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "starlette>=0.27.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
llm = ["ollama>=0.4.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5.0",
    "pre-commit>=3.5.0",
]

[tool.setuptools]
packages = ["backend", "foundation", "mcp_service"]

# ---------------------------------------------------------------------------
# 测试配置（原 tests/README.md 引用但缺失，本次审查补齐）
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "llm_mock: 标记测试跳过真实 LLM 推理，使用预设响应",
    "integration: 标记为集成测试（可能依赖外部服务如 Ollama/SQLite 文件）",
]

[tool.coverage.run]
source = ["backend", "foundation"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60

# ---------------------------------------------------------------------------
# Ruff —— 统一 Lint / Format（pre-commit 与 CI 共用）
# 注：T201(print) 暂不全局启用，避免一次性误伤启动横幅；
#     新业务代码请使用 foundation.logger_framework 的 logger，详见 docs/CODING_STANDARDS.md
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["backend", "foundation", "mcp_service"]
# scripts/ 为运维/迁移辅助脚本，不属于发布产物，暂不纳入严格 lint（见审查报告 backlog）
exclude = ["scripts", ".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
# 第一阶段修复: E722(bare-except)/F821(undefined-name)/UP006/UP045/I001/F541 等 707 处
# 第二阶段债务(P-20)已还清: 原 13 条阶段性 ignore 中，11 条风格类债务经 print→logger(P-16)、
#   静默 except 收口(P-17)、分析模块修复后代码已合规（启用后实测 0 违规），故移除；
#   仅保留以下 3 条（均为社区惯例性 / 格式器不处理的合理 ignore，非技术债）：
ignore = [
    "E501",   # 行过长：ruff format 不折长字符串/URL/注释等真长行，保留（优先 format）
    "B008",   # FastAPI/FastMCP 依赖注入装饰器误报（@app.get(..., dependencies=[Depends(...)]））
    "E402",   # 模块级 import 未置顶（mcp_server 等有意为之）
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"mcp_service/mcp_server.py" = ["T201"]  # 启动横幅允许 print

[tool.ruff.format]
quote-style = "double"
